tweaked to use slate theme

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-remote_theme: pages-themes/slate@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
-title: [Stray Alpha Particles]
-description: [Sometimes things just happen.]
+title: Stray Alpha Particles
+description: Sometimes things just happen.
+show_downloads: false
+google_analytics:
+theme: jekyll-theme-slate
